# lager

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.c  config.h  features.h  guest.c  guest_config.c  guest_config.h  guest_exec.c  guest_exec.h  guest_net.c  guest_net.h  guest_services.c  guest_services.h  host.c  host.h  initramfs.c  initramfs.h  lager.c  lager.h  launcher.c  launcher.h  log.h  modules.c  utils.c  utils.h
features/: audio.c  audio.h  box64.c  box64.h  common.c  common.h  dbus.c  dbus.h  gpu.c  gpu.h  gpu_compat.c  gpu_compat.h  network.c  network.h  notifications.c  notifications.h  openbox.c  openbox.h  power.c  power.h  registry.c  registry.h  wayland.c  wayland.h  x11.c  x11.h
guest/: config.c  config.h  exec.c  exec.h  guest.c  guest.h  services.c  services.h
host/: host.c  initramfs.c  initramfs.h  launcher.c  launcher.h  modules.c  modules.h
misc/: config.c  config.h  log.c  log.h  utils.c
